fixed growth paragraph overflow and button under

--- a/src/component/AboutPage/GrowthMantra/style.css
+++ b/src/component/AboutPage/GrowthMantra/style.css
@@ -71,12 +71,12 @@ a {
   }
 
   .paragraphTextGrowthMantra {
-    width: 300px;
+    width: 350px;
     height: 238px;
     z-index: 1;
     /* margin-left: 10px; */
     top: 567px;
-    margin-top: -60px;
+    margin-top: -130px;
     /* B1 */
 
     font-family: 'Outfit 300';
@@ -92,11 +92,11 @@ a {
     color: black;
   }
   .paragraphTextGrowthMantraTwo {
-    width: 300px;
+    width: 350px;
     height: 238px;
     margin-left: 60px;
     top: 567px;
-    margin-top: -60px;
+    margin-top: -130px;
     z-index: 1;
     /* B1 */
 
@@ -252,9 +252,9 @@ a {
   }
 
   .m-img{
-    /* width:100;
+    width:100;
     height:300%;
-    z-index: 20; */
+    z-index: -1;
   }
 
   @media only screen and (max-device-height: 1000px) {
